[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cht_cyclones"
description = "Toolkit for generating tropical cyclone wind fields"
readme = "README.md"
authors = [
    { name = "Maarten van Ormondt", email = "maarten.vanormondt@deltares.nl"},
	{ name = "Kees Nederhoff", email = "kees.nederhoff@deltares-usa.us"},
]
license = { text = "MIT" }
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Hydrology",
]
requires-python = ">=3.10"
dependencies = [
	"numpy",
    "scipy",
	"pandas",
	"geopandas",
	"matplotlib",
	"shapely",
	"xarray",
	"fiona",
	"toml",
	"boto3",
	"python-dateutil",
	"cht_utils",
	"geojson",
	"netCDF4"
]
dynamic = ["version"]

[project.optional-dependencies]
tests = ["pytest", "pytest-cov"]

[tool.setuptools]
zip-safe = true

[tool.setuptools.dynamic]
version = { attr = "cht_cyclones.__version__" }

[tool.setuptools.packages.find]
include = ["cht_cyclones"]

[tool.setuptools.package-data]
"*" = ["*.yml"]

[tool.pytest.ini_options]
addopts = "--cov cht_cyclones --cov-report xml"
testpaths = ["tests"]
